Closed Bug 1185011 Opened 10 years ago Closed 10 years ago

SourceSurfaceRawData.h is missing a bunch of 'override' keywords, so it now gets -Winconsistent-missing-override build errors

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox41 --- fixed
firefox42 --- fixed

People

(Reporter: dholbert, Assigned: dholbert)

References

Details

Attachments

(2 files)

Bug 1176363 added some new 'override' methods in SourceSurfaceRawData.h, e.g.: https://hg.mozilla.org/integration/mozilla-inbound/rev/0d3ad656d93f#l1.56 ...alongside some methods that were overriding but were not (yet) annotated with 'override'. This makes clang 3.6 & newer angry - it spams a "-Winconsistent-missing-override" build warning (due to now-inconsistent usage of 'override' in the class), and this busts --enable-warnings-as-errors builds (with clang 3.6+). Filing this bug on adding 'override' keywords to this file where they're needed, so that I can build again.
Attached patch fixSplinter Review
Attachment #8635389 - Attachment is patch: true
For the record: I verified that these methods are all indeed overriding things from a superclass (and doing so intentionally, AFAICT). The TYPENAME macro-provided method, GetData, and Stride are declared in the direct parent class DataSourceSurface. The other functions (GetType, GetSize, GetFormat, GuaranteePersistance) are all declared in the grandparent class, SourceSurface. http://mxr.mozilla.org/mozilla-central/source/gfx/2d/2D.h#371 Hence, I'm going to land my patch here with blanket r+ that ehsan granted me for fixes of this sort over in bug 1126447 comment 2.
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment on attachment 8635389 [details] [diff] [review] fix Approval Request Comment See bug 1176363 comment 35.
Attachment #8635389 - Flags: approval-mozilla-aurora?
Comment on attachment 8635389 [details] [diff] [review] fix Approved for uplift to Aurora, seems straightforward. Also changes have been in Nightly for ~2 weeks now.
Attachment #8635389 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
needs rebasing for mozilla-aurora
Flags: needinfo?(dholbert)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: